--- a/perfect-number-http-java/src/main/resources/index.html
+++ b/perfect-number-http-java/src/main/resources/index.html
@@ -10,14 +10,14 @@
 		</div>
 		<hr>
 		<div>
-			<h3>Test a number<h3>
+			<h3>Test a number</h3>
 			<input id="testParamNumber" type="number" placeholder="Number to test">
 			<button id="testButton" onclick="test()">Test</button>
 		</div>
 		<span id="testResult"></span>
 		<hr>
 		<div>
-			<h3>Find perfect numbers<h3>
+			<h3>Find perfect numbers</h3>
 			<input id="findParamNumber1" type="number" placeholder="From">
 			<input id="findParamNumber2" type="number" placeholder="To">
 			<button id="findButton" onclick="find()">Find</button>
@@ -26,7 +26,6 @@
     </body>
 	
 	<script>
-		
 		function test() {
 			document.getElementById("testButton").disabled = true
 			
@@ -73,7 +72,6 @@
 				document.getElementById("findButton").disabled = false
 			})
 		}
-
 	</script>
 
 </html>
